BPER/DEVF/force-app/main/default/objects/Segment__c/Segment__c.object-meta.xml
<CustomObject>
    <label>Segmento</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Segmento Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Segmenti</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>