BPER/DEVF/force-app/main/default/objects/Segment__c/fields/PTF_Gruge__c.field-meta.xml
<CustomField>
    <fullName>PTF_Gruge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gruge</label>
    <referenceTo>Gruge__c</referenceTo>
    <relationshipLabel>Segmenti</relationshipLabel>
    <relationshipName>Segmenti</relationshipName>
    <type>Lookup</type>
</CustomField>