BPER/DEVF/force-app/main/default/objects/Segment__c/fields/PTF_ServiceModel__c.field-meta.xml
<CustomField>
    <fullName>PTF_ServiceModel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Macro-modello di servizio</label>
    <referenceTo>ServiceModel__c</referenceTo>
    <relationshipLabel>Segmenti</relationshipLabel>
    <relationshipName>Segmenti</relationshipName>
    <type>Lookup</type>
</CustomField>