BPER/DEVF/force-app/main/default/objects/Segment__c/fields/PTF_Sigla__c.field-meta.xml
<CustomField>
    <fullName>PTF_Sigla__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sigla</label>
    <length>255</length>
    <type>Text</type>
</CustomField>